# edgesql-lite

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
docs/: DESIGN.md
include/edgesql/: config.hpp
src/: main.cpp
src/concurrency/: rw_lock.cpp  rw_lock.hpp  transaction.cpp  transaction.hpp
src/core/: shutdown.cpp  shutdown.hpp  signal_handler.cpp  signal_handler.hpp  thread_pool.cpp  thread_pool.hpp
src/executor/: context.cpp  context.hpp  executor.cpp  executor.hpp
src/memory/: arena.cpp  arena.hpp  memory_tracker.cpp  memory_tracker.hpp  query_allocator.cpp  query_allocator.hpp
src/observability/: metrics.cpp  metrics.hpp
src/planner/: catalog.cpp  catalog.hpp  plan.cpp  plan.hpp  planner.cpp  planner.hpp
src/security/: auth.cpp  auth.hpp
src/server/: http_server.cpp  http_server.hpp  listener.cpp  listener.hpp  query_handler.cpp  query_handler.hpp
src/sql/: ast.cpp  ast.hpp  parser.cpp  parser.hpp  tokenizer.cpp  tokenizer.hpp
src/storage/: page.hpp  page_manager.cpp  page_manager.hpp  record.hpp  recovery.cpp  recovery.hpp  segment.cpp  segment.hpp  wal.cpp  wal.hpp
